--- a/src/output.css
+++ b/src/output.css
@@ -24,6 +24,7 @@
     --rose-50: #fff7fb;
     --stone-900: #312e2c;
     --stone-600: #5f564d;
+    --stone-150: #e3ddd7;
     --brown-800: #854632;
     --font-outfit: 'Outfit', sans-serif;
     --font-young-serif: 'Young Serif', serif;
@@ -220,6 +221,9 @@
   .list-inside {
     list-style-position: inside;
   }
+  .list-decimal {
+    list-style-type: decimal;
+  }
   .list-disc {
     list-style-type: disc;
   }
@@ -231,6 +235,9 @@
   }
   .bg-\(--rose-50\) {
     background-color: var(--rose-50);
+  }
+  .bg-\(--stone-150\) {
+    background-color: var(--stone-150);
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
@@ -307,6 +314,9 @@
   }
   .text-\(--rose-800\) {
     color: var(--rose-800);
+  }
+  .text-\(--stone-150\) {
+    color: var(--stone-150);
   }
   .text-\(--stone-600\) {
     color: var(--stone-600);
