--- a/src/output.css
+++ b/src/output.css
@@ -580,9 +580,19 @@
       margin-inline: calc(var(--spacing) * 6);
     }
   }
+  .md\:mx-auto {
+    @media (width >= 48rem) {
+      margin-inline: auto;
+    }
+  }
   .md\:my-18\.5 {
     @media (width >= 48rem) {
       margin-block: calc(var(--spacing) * 18.5);
+    }
+  }
+  .md\:ml-auto {
+    @media (width >= 48rem) {
+      margin-left: auto;
     }
   }
   .md\:flex {
@@ -598,6 +608,16 @@
   .md\:h-fit {
     @media (width >= 48rem) {
       height: fit-content;
+    }
+  }
+  .md\:w-\[300px\] {
+    @media (width >= 48rem) {
+      width: 300px;
+    }
+  }
+  .md\:w-\[536px\] {
+    @media (width >= 48rem) {
+      width: 536px;
     }
   }
   .md\:w-\[616px\] {
@@ -655,6 +675,11 @@
       object-fit: none;
     }
   }
+  .md\:p-5 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 5);
+    }
+  }
   .md\:px-6 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 6);
@@ -663,6 +688,12 @@
   .md\:py-18\.5 {
     @media (width >= 48rem) {
       padding-block: calc(var(--spacing) * 18.5);
+    }
+  }
+  .md\:shadow-\[0_4px_4px_rgba\(0\,0\,0\,0\.25\)\] {
+    @media (width >= 48rem) {
+      --tw-shadow: 0 4px 4px var(--tw-shadow-color, rgba(0,0,0,0.25));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
   .lg\:mx-6 {
