--- a/src/output.css
+++ b/src/output.css
@@ -8,18 +8,14 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-800: oklch(47.3% 0.137 46.201);
     --color-white: #fff;
     --spacing: 8px;
-    --text-base: 1rem;
-    --text-base--line-height: calc(1.5 / 1);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
-    --font-weight-normal: 400;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --radius-xl: 0.75rem;
@@ -183,6 +179,9 @@
   }
 }
 @layer utilities {
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
   .my-3 {
     margin-block: calc(var(--spacing) * 3);
   }
@@ -350,14 +349,12 @@
   .text-\(--stone-900\) {
     color: var(--stone-900);
   }
+  .underline {
+    text-decoration-line: underline;
+  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
-  }
-  .sm\:mt-1\.5 {
-    @media (width >= 40rem) {
-      margin-top: calc(var(--spacing) * 1.5);
-    }
   }
   .md\:mx-auto {
     @media (width >= 48rem) {
@@ -419,9 +416,9 @@
       padding-inline: calc(var(--spacing) * 6);
     }
   }
-  .md\:py-18\.5 {
+  .md\:py-16 {
     @media (width >= 48rem) {
-      padding-block: calc(var(--spacing) * 18.5);
+      padding-block: calc(var(--spacing) * 16);
     }
   }
   .md\:text-\[40px\] {
